Adding all, learningplan , blog, identity html

--- a/index.html
+++ b/index.html
@@ -1,9 +1,52 @@
-<html>
-  <head>
-    <title>My blog</title>
-  <body>
-    <h1>Kia ora Taiao! (Hello World!)</h1> 
-    <p> This is the beginning of my website home page.</p>
-    <p> It will eventually contain a list of links to all my blogs. </p>
-  </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Blog about me</title>
+  <link rel="stylesheet" href="./styles/style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Hachi+Maru+Pop&display=swap" rel="stylesheet">    
+</head>
+<body>
+  <!-- <header id="title"> -->
+    <h1>Welcome to this Blog about me</h1>
+    <ul>
+      <li><a href="index.html" class="active">About Me</a></li>
+      <li><a href="blog.html">Blog</a></li>
+      <li><a href="identity.html">Identities and Values</a></li>
+      <li><a href="learningPlan.html">Learning Plan</a></li>
+    </ul>
+  <!-- </header> -->
+<main>
+  <div class="intro">
+    <h2>Here are some <span class="important">facts</span> about me:</h2>
+    <hr>
+      <p>I am born in bred in New Zealand</p>
+      <p>I am Laotian</p>
+      <p>Currently 22 years of age and counting</p>
+      <p>Height is 6ft ;)</p>
+      <p>Live in Porirua, Wellington</p>
+  </div>
+  <div class="intro">
+    <h2>What my <span class="important">interests</span> and <span class="important">hobbies</span> are</h2>
+    <hr>
+      <p>I like eating ice cream</p>
+      <p>Kanye West is my favourite artist</p>
+      <p>Basketball is my favourite sport</p>
+      <p>Have a huge interest in technology</p>
+      <p>I am multilingual</p>
+  </div>
+  <div class="intro">
+    <h2>Some of my <span class="important">goals</span> in life</h2>
+    <hr>
+      <p>Get a good paying job in the future</p>
+      <p>Having my friends and family succeed in life</p>
+      <p>Taking care of my parents</p>
+      <p>Starting a family</p>
+      <p>Being mentally, physically and spiritually happy :)</p>
+  </div>
+  </main>
+    <img src="https://cloudfront-ap-southeast-2.images.arcpublishing.com/nzme/XPLG6CJ7ZOHIOSMHAXKG6V7RL4.jpg" alt="wellington" class="image">
+</body>
 </html>
